--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qianft.m.qian"
-    android:versionCode="20160800"
+    android:versionCode="20160801"
     android:versionName="1.2" >
 
     <uses-sdk
@@ -20,6 +20,19 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
+        
+        <meta-data
+		    android:name="UMENG_APPKEY"
+		    android:value="57a96f7a67e58ed15b002a42" >
+		</meta-data>
+		<meta-data
+		    android:name="UMENG_MESSAGE_SECRET"
+		    android:value="5cfc266983e8d69e920e3730a740d6f6" >
+		</meta-data>
+		<meta-data
+		    android:name="UMENG_CHANNEL"
+		    android:value="umeng" >
+		</meta-data>
         <activity
             android:name=".activity.WelcomeActivity"
             android:label="@string/app_name" 
