--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,12 +14,25 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> 
     <application
         android:name="com.qianft.m.qian.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value=" 57a96f7a67e58ed15b002a42" >
+         </meta-data>
+        <meta-data
+		    android:name="UMENG_MESSAGE_SECRET"
+		    android:value="5cfc266983e8d69e920e3730a740d6f6" >
+        </meta-data>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="Umeng" >
+        </meta-data>
         <activity
             android:name=".activity.WelcomeActivity"
             android:label="@string/app_name" 
