umeng push update

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" 
+                  android:launchMode="singleTop"
             	  android:screenOrientation="portrait" >
         </activity>
     	<activity android:name="com.qianft.m.qian.wxapi.WXEntryActivity"
