--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
    <!--  <uses-sdk android:minSdkVersion="3" /> -->
-    <uses-permission android:name="android.permission.INTERNET"/> 
+    <uses-permission android:name="androidj.permission.INTERNET"/> 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> 
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
@@ -24,7 +24,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> 
@@ -37,11 +36,9 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- <uses-permission android:name="android.permission.CLEAR_APP_USER_DATA" /> -->
     <!-- <uses-permission android:name="android.permission.DEVICE_POWER" /> -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
     <application
         android:name="com.qianft.m.qian.BaseApplication"
         android:allowBackup="true"
@@ -59,7 +56,7 @@
 		</meta-data>
 		<meta-data
 		    android:name="UMENG_CHANNEL"
-		    android:value="360" >
+		    android:value="xiaomi" >
 		</meta-data>
 
         <activity
