--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,11 +10,7 @@
    <!--  <uses-sdk android:minSdkVersion="3" /> -->
     <uses-permission android:name="androidj.permission.INTERNET"/> 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/> 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> 
 	<!--在SDCard中创建与删除文件权限 -->
   　　<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
   　　<!--往SDCard写入数据权限 -->
@@ -25,10 +21,8 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> 
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <!-- <uses-permission android:name="android.permission.DELETE_PACKAGES" /> -->
@@ -39,13 +33,19 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.SET_DEBUG_APP" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <application
         android:name="com.qianft.m.qian.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
-        
         <meta-data
 		    android:name="UMENG_APPKEY"
 		    android:value="57a96f7a67e58ed15b002a42" >
@@ -58,7 +58,6 @@
 		    android:name="UMENG_CHANNEL"
 		    android:value="xiaomi" >
 		</meta-data>
-
         <activity
             android:name=".activity.WelcomeActivity"
             android:label="@string/app_name" 
@@ -87,7 +86,44 @@
             android:name=".activity.UnlockGesturePasswordActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-        
+    	 <activity           
+			android:name="com.umeng.socialize.editorpage.ShareActivity"
+			android:theme="@style/Theme.UMDefault"
+			android:excludeFromRecents="true"/>
+    	 <activity
+            android:name=".activity.WBShareActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity> 
+		<activity
+            android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="false" >
+        </activity>
+        <service 
+            android:name="com.sina.weibo.sdk.net.DownloadService"
+            android:exported="false">
+        </service>
+        <activity
+			 android:name="com.tencent.tauth.AuthActivity"
+			 android:launchMode="singleTask"
+			 android:noHistory="true" >
+			<intent-filter>
+			<action android:name="android.intent.action.VIEW" />
+			<category android:name="android.intent.category.DEFAULT" />
+			<category android:name="android.intent.category.BROWSABLE" />
+			<data android:scheme="tencent1105582062" /> 
+			</intent-filter>
+		</activity>
+		<activity          
+	    	android:name="com.tencent.connect.common.AssistActivity"
+		    android:screenOrientation="portrait"
+		    android:theme="@android:style/Theme.Translucent.NoTitleBar" />
     	<service android:name=".service.AppUpgradeService"></service>
     </application>
 
