--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-22
 manifestmerger.enabled=true
-android.library.reference.1=../PushSDK
 
+android.library.reference.1=../../wing_workspace/PushSDK
