--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qianft.m.qian"
-    android:versionCode="20160816"
-    android:versionName="1.3" >
+    android:versionCode="20160927"
+    android:versionName="1.4" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -53,7 +53,7 @@
 		</meta-data>
 		<meta-data
 		    android:name="UMENG_CHANNEL"
-		    android:value="xiaomi" >
+		    android:value="qianftserver" >
 		</meta-data>
         <activity
             android:name=".activity.WelcomeActivity"
@@ -77,11 +77,11 @@
     	</activity>
     	 <activity
             android:name=".activity.CreateGesturePasswordActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
     	 <activity
             android:name=".activity.UnlockGesturePasswordActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
     	 <activity           
 			android:name="com.umeng.socialize.editorpage.ShareActivity"
